[package]
name = "timeplot"
version = "0.8.0"
description = "Personal activity tracker & graph plotter"
edition = "2018"
authors = [
  "Vasya Novikov <n1dr+cm3513git@ya.ru>",
  "jbpratt <29494941+jbpratt78@users.noreply.github.com>"
]
license="GPL-3.0-or-later"
keywords = ["graph", "plot", "time", "tracker", "logger"]
repository = "https://github.com/vn971/timeplot"
readme = "README.md"

[dependencies]
chrono = "0.4.13"
directories = "3.0.1"
env_logger = "0.7.1"
fs2 = "0.4.3"
gnuplot = "0.0.37"
log = "0.4.11"
open = "1.4.0"
config = { version = "0.10.1", default-features = false, features = ["toml"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }


[profile.release]
lto = true

