[package]
name = "timeplot"
version = "0.8.2"
description = "Personal activity tracker & graph plotter"
edition = "2018"
authors = [
  "Vasya Novikov <n1dr+cm3513git@ya.ru>",
  "jbpratt <29494941+jbpratt78@users.noreply.github.com>"
]
license="GPL-3.0-or-later"
keywords = ["graph", "plot", "time", "tracker", "logger"]
repository = "https://github.com/vn971/timeplot"
readme = "README.md"

[dependencies]
chrono = "0.4.22"
config = { version = "0.13.2", default-features = false, features = ["toml"] }
directories = "4.0.1"
env_logger = "0.9.1"
fs2 = "0.4.3"
gnuplot = "0.0.37"
lazy_static = "1.4.0"
log = "0.4.17"
open = "3.0.3"
structopt = { version = "0.3.26", features = ["color"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }


[profile.release]
lto = true

